--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       align-items: center;
       background: #000;
       overflow: hidden;
-      font-family: Arial, sans-serif;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
       color: white;
     }
 
@@ -25,36 +25,49 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: radial-gradient(circle, #111, #000);
+      background: linear-gradient(135deg, #ff33cc, #33ccff, #ff9933);
+      background-size: 400% 400%;
+      animation: gradientShift 8s ease infinite;
       font-size: 2.5rem;
       font-weight: bold;
+      z-index: 100;
     }
 
     #intro span {
       animation: glowText 2s infinite alternate;
-      text-shadow: 0 0 15px #ff33cc, 0 0 30px #ff33cc, 0 0 60px #ff33cc;
+      text-shadow: 0 0 25px #fff, 0 0 50px #ff33cc, 0 0 100px #33ccff;
     }
 
     #startBtn {
       margin-top: 20px;
-      padding: 12px 25px;
-      font-size: 1.2rem;
+      padding: 15px 35px;
+      font-size: 1.5rem;
       font-weight: bold;
       border: none;
-      border-radius: 10px;
+      border-radius: 50px;
       cursor: pointer;
-      background: linear-gradient(45deg, #ff33cc, #33ccff);
+      background: linear-gradient(45deg, #ff33cc, #33ccff, #00ff99);
       color: white;
-      box-shadow: 0 0 15px #ff33cc;
-      transition: transform 0.2s;
+      box-shadow: 0 0 20px #ff33cc, 0 0 40px #33ccff;
+      animation: pulse 1.5s infinite;
     }
-    #startBtn:hover {
-      transform: scale(1.1);
+    #startBtn:hover { transform: scale(1.1); }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.15); }
+      100% { transform: scale(1); }
     }
 
     @keyframes glowText {
-      from { color: #ff33cc; text-shadow: 0 0 15px #ff33cc, 0 0 30px #ff33cc; }
-      to { color: #33ccff; text-shadow: 0 0 20px #33ccff, 0 0 40px #33ccff; }
+      from { color: #fff; }
+      to { color: #ff0; }
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     /* ---------- MAIN SCENE ---------- */
@@ -62,13 +75,15 @@
       display: none;
       width: 100%;
       height: 100%;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
+      position: relative;
     }
 
     .scene {
       width: 600px;
-      height: 600px;
+      height: 500px;
       perspective: 1200px;
       position: relative;
     }
@@ -78,7 +93,7 @@
       height: 100%;
       position: absolute;
       transform-style: preserve-3d;
-      animation: rotate 20s linear infinite;
+      animation: rotate 25s linear infinite;
     }
 
     .carousel img {
@@ -89,22 +104,23 @@
       border-radius: 15px;
       box-shadow: 0 10px 20px rgba(0,0,0,0.7);
       border: 3px solid #fff;
+      animation: float 6s ease-in-out infinite, bounceZoom 3s ease-in-out infinite;
     }
 
-    /* Center Text */
-    .center-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 3rem;
+    /* Birthday Texts */
+    .top-text, .bottom-text {
+      font-size: 2.5rem;
       font-weight: bold;
-      color: #00eaff;
       text-align: center;
-      z-index: 10;
-      animation: glow 2s infinite alternate, float 3s ease-in-out infinite;
-      text-shadow: 0 0 10px #00eaff, 0 0 20px #00eaff, 0 0 40px #00eaff, 0 0 80px #00eaff;
+      background: linear-gradient(90deg, #ff33cc, #33ccff, #ffff33);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: glow 2s infinite alternate;
+      text-shadow: 0 0 25px #fff, 0 0 50px #ff33cc, 0 0 100px #33ccff;
     }
+
+    .top-text { margin-bottom: 20px; }
+    .bottom-text { margin-top: 20px; }
 
     @keyframes rotate {
       from { transform: rotateY(0deg); }
@@ -112,32 +128,76 @@
     }
 
     @keyframes glow {
-      from { text-shadow: 0 0 10px #00eaff, 0 0 20px #00eaff; color: #00eaff; }
-      to { text-shadow: 0 0 20px #ff00ff, 0 0 40px #ff00ff; color: #ff66ff; }
+      from { text-shadow: 0 0 20px #ff33cc, 0 0 40px #33ccff; }
+      to { text-shadow: 0 0 40px #ffff33, 0 0 80px #ff00ff; }
     }
 
     @keyframes float {
-      0%, 100% { transform: translate(-50%, -50%) translateY(0); }
-      50% { transform: translate(-50%, -50%) translateY(-15px); }
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+
+    @keyframes bounceZoom {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.1); }
     }
 
     /* ---------- CONFETTI ---------- */
     .confetti {
       position: fixed;
       top: 0;
-      width: 10px;
-      height: 10px;
+      width: 12px;
+      height: 12px;
       background-color: red;
+      border-radius: 50%;
       animation: fall linear forwards;
-      opacity: 0.8;
+      opacity: 0.9;
       z-index: 20;
     }
-
     @keyframes fall {
       to {
-        transform: translateY(100vh) rotate(360deg);
+        transform: translateY(100vh) rotate(720deg);
         opacity: 0;
       }
+    }
+
+    /* ---------- BALLOONS ---------- */
+    .balloon {
+      position: absolute;
+      bottom: -100px;
+      width: 40px;
+      height: 55px;
+      background: red;
+      border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+      animation: rise 10s linear forwards;
+    }
+    .balloon::after {
+      content: '';
+      position: absolute;
+      width: 2px;
+      height: 60px;
+      background: #fff;
+      top: 55px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    @keyframes rise {
+      0% { transform: translateY(0) rotate(0); opacity: 1; }
+      100% { transform: translateY(-110vh) rotate(360deg); opacity: 0; }
+    }
+
+    /* ---------- FIREWORKS ---------- */
+    .particle {
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      opacity: 0.9;
+      animation: explode 1s ease-out forwards;
+    }
+    @keyframes explode {
+      0% { transform: translate(0,0) scale(1); opacity: 1; }
+      100% { transform: translate(var(--x), var(--y)) scale(0.5); opacity: 0; }
     }
   </style>
 </head>
@@ -155,8 +215,10 @@
       <source src="birthday-song.mp3" type="audio/mpeg">
     </audio>
 
+    <!-- Text above -->
+    <div class="top-text">🎉 Happy Birthday 🎂 Akkowww 🌍</div>
+
     <div class="scene">
-      <div class="center-text">🎉 Happy Birthday 🎂<br>Akkowww 🌍</div>
       <div class="carousel">
         <img src="photo1.jpg" style="transform: rotateY(0deg) translateZ(400px);">
         <img src="photo2.jpg" style="transform: rotateY(45deg) translateZ(400px);">
@@ -168,6 +230,9 @@
         <img src="photo8.jpg" style="transform: rotateY(315deg) translateZ(400px);">
       </div>
     </div>
+
+    <!-- Text below -->
+    <div class="bottom-text">✨ Once Again, Happy Birthday Akkowww 🌍 ✨</div>
   </div>
 
   <script>
@@ -179,29 +244,77 @@
     startBtn.addEventListener("click", () => {
       intro.style.display = "none";
       main.style.display = "flex";
-      song.play();
+      song.play().catch(err => console.log("Song blocked:", err));
 
-      // Start confetti
-      setInterval(createConfetti, 150);
+      // Confetti
+      setInterval(createConfetti, 120);
+
+      // Balloons
+      setInterval(createBalloon, 2000);
+
+      // Fireworks
+      setInterval(createFirework, 4000);
     });
 
-    // Generate falling confetti
+    // Confetti
     function createConfetti() {
       const confetti = document.createElement("div");
       confetti.classList.add("confetti");
       document.body.appendChild(confetti);
 
-      const size = Math.random() * 8 + 5;
+      const size = Math.random() * 10 + 6;
       confetti.style.width = `${size}px`;
       confetti.style.height = `${size}px`;
 
-      const colors = ["#ff0", "#0f0", "#0ff", "#f0f", "#f00", "#00f"];
+      const shapes = ["50%", "0%", "20%"];
+      confetti.style.borderRadius = shapes[Math.floor(Math.random() * shapes.length)];
+
+      const colors = ["#ff0", "#0f0", "#0ff", "#f0f", "#f00", "#00f", "#ff6600"];
       confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
 
       confetti.style.left = Math.random() * window.innerWidth + "px";
       confetti.style.animationDuration = (Math.random() * 3 + 3) + "s";
 
       setTimeout(() => { confetti.remove(); }, 6000);
+    }
+
+    // Balloons
+    function createBalloon() {
+      const balloon = document.createElement("div");
+      balloon.classList.add("balloon");
+      document.body.appendChild(balloon);
+
+      const colors = ["#ff6666", "#66ff66", "#66ccff", "#ffcc66", "#cc66ff"];
+      balloon.style.background = colors[Math.floor(Math.random() * colors.length)];
+      balloon.style.left = Math.random() * window.innerWidth + "px";
+      balloon.style.animationDuration = (Math.random() * 6 + 6) + "s";
+
+      setTimeout(() => { balloon.remove(); }, 12000);
+    }
+
+    // Fireworks
+    function createFirework() {
+      const x = Math.random() * window.innerWidth;
+      const y = Math.random() * window.innerHeight / 2;
+
+      for (let i = 0; i < 25; i++) {
+        const particle = document.createElement("div");
+        particle.classList.add("particle");
+        document.body.appendChild(particle);
+
+        const angle = (i / 25) * 2 * Math.PI;
+        const radius = Math.random() * 120 + 50;
+        particle.style.setProperty("--x", `${Math.cos(angle) * radius}px`);
+        particle.style.setProperty("--y", `${Math.sin(angle) * radius}px`);
+
+        const colors = ["#ff0", "#0f0", "#0ff", "#f0f", "#f00", "#00f"];
+        particle.style.background = colors[Math.floor(Math.random() * colors.length)];
+
+        particle.style.left = `${x}px`;
+        particle.style.top = `${y}px`;
+
+        setTimeout(() => { particle.remove(); }, 1000);
+      }
     }
   </script>
 </body>
