--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     .scene {
       width: 600px;
-      height: 500px;
-      perspective: 1200px;
+      height: 400px;
+      perspective: 1500px;
       position: relative;
     }
 
@@ -93,12 +93,10 @@
       border-radius: 15px;
       box-shadow: 0 10px 20px rgba(0,0,0,0.7);
       border: 3px solid #fff;
-      animation: float 6s ease-in-out infinite;
     }
 
-    /* Birthday Texts */
     .top-text, .bottom-text {
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       font-weight: bold;
       text-align: center;
       background: linear-gradient(90deg, #ff33cc, #33ccff, #ffff33);
@@ -115,10 +113,6 @@
       from { text-shadow:0 0 20px #ff33cc,0 0 40px #33ccff; }
       to   { text-shadow:0 0 40px #ffff33,0 0 80px #ff00ff; }
     }
-    @keyframes float {
-      0%,100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
 
     /* ---------- CONFETTI ---------- */
     .confetti {
@@ -126,7 +120,6 @@
       top: 0;
       width: 12px;
       height: 12px;
-      background-color: red;
       border-radius: 50%;
       animation: fall linear forwards;
       opacity: 0.9;
@@ -139,39 +132,59 @@
     /* ---------- BALLOONS ---------- */
     .balloon {
       position: absolute;
-      bottom: -100px;
+      bottom: -150px;
       width: 40px;
-      height: 55px;
-      border-radius: 50% 50% 50% 50%/60% 60% 40% 40%;
-      animation: rise 10s linear forwards;
+      height: 60px;
+      border-radius: 50%;
+      opacity: 0.8;
+      animation: rise 8s linear forwards;
+      z-index: 15;
     }
     .balloon::after {
-      content: '';
+      content: "";
       position: absolute;
-      width: 2px;
-      height: 60px;
-      background: #fff;
-      top: 55px;
+      top: 60px;
       left: 50%;
-      transform: translateX(-50%);
+      width: 2px;
+      height: 40px;
+      background: white;
     }
     @keyframes rise {
-      0%{transform:translateY(0) rotate(0);opacity:1;}
-      100%{transform:translateY(-110vh) rotate(360deg);opacity:0;}
+      to { transform: translateY(-120vh); opacity: 0; }
     }
 
     /* ---------- FIREWORKS ---------- */
-    .particle {
+    .firework {
       position: absolute;
-      width: 6px;
-      height: 6px;
+      width: 4px;
+      height: 4px;
       border-radius: 50%;
+      background: yellow;
       opacity: 0.9;
-      animation: explode 1s ease-out forwards;
+      animation: explode 1.2s ease-out forwards;
     }
     @keyframes explode {
-      0%{transform:translate(0,0) scale(1);opacity:1;}
-      100%{transform:translate(var(--x),var(--y)) scale(0.5);opacity:0;}
+      0% { transform: scale(0); opacity: 1; }
+      100% { transform: scale(3); opacity: 0; }
+    }
+
+    /* ---------- FLOATING NAME ---------- */
+    .floating-name {
+      position: absolute;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #fff;
+      text-shadow: 0 0 10px #ff33cc, 0 0 20px #33ccff, 0 0 40px #ffff33;
+      opacity: 0.8;
+      animation: floatName 10s linear forwards;
+      pointer-events: none;
+      z-index: 30;
+    }
+    @keyframes floatName {
+      0% { transform: translateY(0) scale(0.8); opacity: 0; }
+      20% { opacity: 1; }
+      80% { opacity: 1; }
+      100% { transform: translateY(-100vh) scale(1.2); opacity: 0; }
     }
   </style>
 </head>
@@ -185,11 +198,10 @@
   <!-- Main Page -->
   <div id="main">
     <!-- Song -->
-    <audio id="song" autoplay loop>
+    <audio id="song" loop>
       <source src="birthday-song.mp3" type="audio/mpeg">
     </audio>
 
-    <!-- Top Text -->
     <div class="top-text">🎉 Happy Birthday 🎂 Akkowww 🌍</div>
 
     <div class="scene">
@@ -205,7 +217,6 @@
       </div>
     </div>
 
-    <!-- Bottom Text -->
     <div class="bottom-text">✨ Once Again, Happy Birthday Akkowww 🌍 ✨</div>
   </div>
 
@@ -219,60 +230,92 @@
       intro.style.display = "none";
       main.style.display = "flex";
 
+      // Play music after button click (mobile-safe)
       song.play().catch(err => console.log("Autoplay blocked:", err));
 
+      // Start effects
       setInterval(createConfetti, 120);
       setInterval(createBalloon, 2000);
-      setInterval(createFirework, 4000);
+      setInterval(createFirework, 3000);
+      setInterval(createFloatingName, 2500);
     });
 
-    // Confetti
+    /* ---------- CONFETTI ---------- */
     function createConfetti() {
       const confetti = document.createElement("div");
       confetti.classList.add("confetti");
       document.body.appendChild(confetti);
+
       const size = Math.random() * 10 + 6;
       confetti.style.width = `${size}px`;
       confetti.style.height = `${size}px`;
-      const shapes = ["50%","0%","20%"];
-      confetti.style.borderRadius = shapes[Math.floor(Math.random()*shapes.length)];
-      const colors = ["#ff0","#0f0","#0ff","#f0f","#f00","#00f","#ff6600"];
-      confetti.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)];
-      confetti.style.left = Math.random()*window.innerWidth + "px";
-      confetti.style.animationDuration = (Math.random()*3+3)+"s";
-      setTimeout(()=>confetti.remove(),6000);
+
+      const colors = ["#ff0", "#0f0", "#0ff", "#f0f", "#f00", "#00f", "#ff6600"];
+      confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+
+      confetti.style.left = Math.random() * window.innerWidth + "px";
+      confetti.style.animationDuration = (Math.random() * 3 + 3) + "s";
+
+      setTimeout(() => confetti.remove(), 6000);
     }
 
-    // Balloons
+    /* ---------- BALLOONS ---------- */
     function createBalloon() {
       const balloon = document.createElement("div");
       balloon.classList.add("balloon");
       document.body.appendChild(balloon);
-      const colors = ["#ff6666","#66ff66","#66ccff","#ffcc66","#cc66ff"];
-      balloon.style.background = colors[Math.floor(Math.random()*colors.length)];
-      balloon.style.left = Math.random()*window.innerWidth+"px";
-      balloon.style.animationDuration = (Math.random()*6+6)+"s";
-      setTimeout(()=>balloon.remove(),12000);
+
+      const colors = ["red", "blue", "green", "yellow", "pink", "purple", "orange"];
+      balloon.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+      balloon.style.left = Math.random() * window.innerWidth + "px";
+
+      setTimeout(() => balloon.remove(), 9000);
     }
 
-    // Fireworks
+    /* ---------- FIREWORKS ---------- */
     function createFirework() {
-      const x = Math.random()*window.innerWidth;
-      const y = Math.random()*window.innerHeight/2;
-      for(let i=0;i<25;i++){
-        const particle=document.createElement("div");
-        particle.classList.add("particle");
+      const x = Math.random() * window.innerWidth;
+      const y = Math.random() * window.innerHeight / 2; // upper half screen
+
+      for (let i = 0; i < 20; i++) {
+        const particle = document.createElement("div");
+        particle.classList.add("firework");
         document.body.appendChild(particle);
-        const angle=(i/25)*2*Math.PI;
-        const radius=Math.random()*120+50;
-        particle.style.setProperty("--x",`${Math.cos(angle)*radius}px`);
-        particle.style.setProperty("--y",`${Math.sin(angle)*radius}px`);
-        const colors=["#ff0","#0f0","#0ff","#f0f","#f00","#00f"];
-        particle.style.background=colors[Math.floor(Math.random()*colors.length)];
-        particle.style.left=`${x}px`;
-        particle.style.top=`${y}px`;
-        setTimeout(()=>particle.remove(),1000);
+
+        const colors = ["red", "yellow", "blue", "lime", "cyan", "magenta", "orange"];
+        particle.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+
+        particle.style.left = x + "px";
+        particle.style.top = y + "px";
+
+        const angle = Math.random() * 2 * Math.PI;
+        const distance = Math.random() * 100 + 50;
+        const dx = Math.cos(angle) * distance;
+        const dy = Math.sin(angle) * distance;
+
+        particle.animate(
+          [
+            { transform: "translate(0,0)", opacity: 1 },
+            { transform: `translate(${dx}px, ${dy}px)`, opacity: 0 }
+          ],
+          { duration: 1200, easing: "ease-out", fill: "forwards" }
+        );
+
+        setTimeout(() => particle.remove(), 1500);
       }
+    }
+
+    /* ---------- FLOATING NAMES ---------- */
+    function createFloatingName() {
+      const name = document.createElement("div");
+      name.classList.add("floating-name");
+      name.textContent = "Akkowww 🌍";
+      document.body.appendChild(name);
+
+      name.style.left = Math.random() * window.innerWidth + "px";
+      name.style.top = window.innerHeight + "px"; // start from bottom
+
+      setTimeout(() => name.remove(), 10000);
     }
   </script>
 </body>
